# ChangeLog for app-emacs/oddmuse
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Jun 2008; Ulrich Mueller <ulm@gentoo.org> oddmuse-20070712.ebuild,
  oddmuse-20071115.ebuild:
  SIMPLE_ELISP is no longer necessary with new elisp.eclass.

*oddmuse-20071115 (29 Feb 2008)

  29 Feb 2008; Ulrich Mueller <ulm@gentoo.org> +oddmuse-20071115.ebuild:
  Version bump.

  17 Oct 2007; Ulrich Mueller <ulm@gentoo.org> oddmuse-20070712.ebuild:
  Tested on amd64, add keyword.

  17 Oct 2007; Ulrich Mueller <ulm@gentoo.org> oddmuse-20070712.ebuild:
  RDEPEND on net-misc/curl.

*oddmuse-20070712 (16 Oct 2007)

  16 Oct 2007; Ulrich Mueller <ulm@gentoo.org> +files/50oddmuse-gentoo.el,
  +metadata.xml, +oddmuse-20070712.ebuild:
  Initial import. Ebuild contributed by me.
