@@ -1,7 +1,7 @@
 AUX 50oddmuse-gentoo.el 777 RMD160 ee75d29fcdb45a12b1f5b31eaeae8c8e62d359ce SHA1 f721d95a9d1c478f515a38890030923abffcbf48 SHA256 a83426a04d09f33d42ef1ec086a42f1c0fafd95dd243ede976e4ca2cc18913d7
-DIST oddmuse-20070712.el.bz2 4878 RMD160 1026872309960b6ef0d4f353c581339c8860a5a3 SHA1 7cac34e82a33bd092c8ce0edccdaaabe7b595c12 SHA256 8274f58ffe2f130d57ab3e5455b002df6eead012483047bc7e7c1071568ec5b8
 DIST oddmuse-20071115.el.bz2 6016 RMD160 c43e95f5cdee1d522198106da8d22b6c6b14e97e SHA1 e2c605e53c6075b195169c888630b7ec7362c991 SHA256 53871c8e306f5595d71910dccf24a05d52943139ac71f6cda74282094bb46310
-EBUILD oddmuse-20070712.ebuild 492 RMD160 f122b727b8a520eade7947b20aa27187af0e7a48 SHA1 d59286ec668e230f0a58b3db2842bbb7ce866eea SHA256 343376817021a9663643e66cf5fb6c08fc83a3000e5bc864039edd89bff267a6
+DIST oddmuse-20080421.el.bz2 6050 RMD160 96fa2895fb0691b06a9b3bc53fb488439dd84784 SHA1 9cf9c22ab302889a9e5e6a6c6e322a19da9e64a7 SHA256 348b56118d5aaac3113fbebc8e7289b69cae4c9f538da868269836eb6e5f554a
 EBUILD oddmuse-20071115.ebuild 492 RMD160 f122b727b8a520eade7947b20aa27187af0e7a48 SHA1 d59286ec668e230f0a58b3db2842bbb7ce866eea SHA256 343376817021a9663643e66cf5fb6c08fc83a3000e5bc864039edd89bff267a6
-MISC ChangeLog 804 RMD160 d0bbb8df31e6da8db086adb5ffb72be07e8b47e5 SHA1 e7324b7d1062d820648ff99f9fb00e74c8829d99 SHA256 1fedf73b6db375a284996834fa7d7fa80f083276c7b2c39de3ecad2d4f0a5ae6
+EBUILD oddmuse-20080421.ebuild 471 RMD160 4644853b13024425b7942c0713259346e8a5cb83 SHA1 94ed9afa0f44d2768a0577d19662f1b73eea8152 SHA256 8c009436fb277e37db3499d0c2946e12d35186e994709deec1367d2a9ed19c87
+MISC ChangeLog 1010 RMD160 5a0fe272eb41986d26ba8dabdec4416877ae43a1 SHA1 2de7f76332b837a361a82c0e8566ca2b783bc5f3 SHA256 94dcfaa19fd810b86d40a0a0c968e377645035352e2ab22063a3533b9ad905ed
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
