@@ -2,9 +2,11 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
+NEED_EMACS=22
+
 inherit elisp
 
-DESCRIPTION="Edit pages on an Oddmuse wiki using curl"
+DESCRIPTION="Edit pages on an Oddmuse wiki"
 HOMEPAGE="http://www.emacswiki.org/cgi-bin/wiki/OddmuseMode"
 # taken from: http://www.emacswiki.org/cgi-bin/emacs/download/${PN}.el
 SRC_URI="http://dev.gentoo.org/~ulm/distfiles/${P}.el.bz2"
@@ -13,7 +15,5 @@ LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
-
-RDEPEND="net-misc/curl"
 
 SITEFILE=50${PN}-gentoo.el
