@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*oddmuse-20080421 (18 Jun 2008)
+
+  18 Jun 2008; Ulrich Mueller <ulm@gentoo.org> -oddmuse-20070712.ebuild,
+  +oddmuse-20080421.ebuild:
+  Version bump; needs Emacs 22, no longer depends on curl. Remove old.
+
   03 Jun 2008; Ulrich Mueller <ulm@gentoo.org> oddmuse-20070712.ebuild,
   oddmuse-20071115.ebuild:
   SIMPLE_ELISP is no longer necessary with new elisp.eclass.
